fixing gap spacing

--- a/scss/components/_footer-section.scss
+++ b/scss/components/_footer-section.scss
@@ -16,7 +16,7 @@
     @media screen and (max-width: 26.5625rem) {
     padding: 4.25rem 2rem;
     row-gap: 2.875rem;
-    gap: 5.875rem;
+    gap: 4.875rem;
         grid-template-columns: 1fr 1fr;
     }
 
@@ -65,3 +65,4 @@
     display: flex;
     gap: 1.875rem;
 }
+
